@@ -8,5 +8,5 @@ usr/share/lintian/overrides
 var/cache/apache2
 var/cache/apache2/mod_cache_disk
 var/log/apache2
-var/www
+var/www/html
 usr/share/bug/apache2
